[package]
name = "turtlebot"
version = "0.1.0"
authors = ["scturtle <scturtle@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1.4"
chrono = "0.4"
chrono-tz = "0.5"
rss = "1"
atom_syndication = "0.8"
feedfinder = "0.2"
url = "1"  # feedfinder
isahc = { version = "0.8", features = ["json"] }
rusqlite = { version = "0.21", features = ["chrono"] }
futures = "0.3"
async-std = "1"
