[package]
name = "turtlebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
env_logger = { version = "0.11.3", default-features = false, features = ["humantime"] }
futures = { version = "0.3.30", default-features = false }
log = "0.4.22"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
rusqlite = "0.30"
feed-rs = "2"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
serde = "1"
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.9"
async-trait = "0"
feedfinder = "0.4"
url = "2"